# REST_API

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 04c9cd5f7e62_unique_constraint.py  3877acf4827b_token.py  45153de6fee9_unique_constraint.py  51933a5223be_user_avatar_and_confirm.py  7612da8215d4_users.py  deb05c166458_init.py  f1646820bdee_init.py  f1646820bdee_unique_constraint.py  fee87ceece57_contact_unique_add_user.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16398  16399  16403  16405  16409  16411  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/conf/: config.ini  config.py
src/database/: base_models.py  db.py  models.py
src/dependencies/: cache.py  db.py  password_handler.py  token_user.py
src/models/: base_models.py  contact.py  user.py
src/repository/: contacts_repo.py  users_repo.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact_schema.py  user_schema.py
src/services/: auth.py  hash_handler.py  mail.py  media.py
src/servises/: auth.py  mail.py  media.py
src/templates/: password_reset_email.html
tests/: conftest.py  test_repository_contacts_repo.py  test_repository_users_repo.py  test_router_auth.py  test_router_users.py
